--- a/prometeu/artigos.html
+++ b/prometeu/artigos.html
@@ -36,7 +36,7 @@
 
         <h2>Fenomenologia</h2>
         <div class="card">
-            <div class="card-header"><a href=artigo_x.html>Kate Bush subindo a colina da qualia (um acordo com... um morcego?)</a></div>
+            <div class="card-header"><a href='artigo_qualia.html'>Kate Bush subindo a colina da qualia (um acordo com... um morcego?)</a></div>
             <div class="card-body"> <img style = "border: 5px solid #EE8B31;" align="right" src = I1/Kate_Bush.jpeg width = 35% >
                 <p>
                     Séries populares como Stranger Things têm uma propriedade talvez tão interessante quanto suas histórias em si: elas nos permitem, de certa forma, compartilhar experiências. Milhões de pessoas ao redor do mundo, por mais diferentes que sejam, são unidas por um instante ao experimentarem aquela cena emocionante, aquele momento decisivo, aquele final arrebatador. Ou ao menos é o que parece. Mesmo que todos vissem simultaneamente a mesma cena, e nas exatas mesmas condições, elas realmente teriam a mesma experiência? Quando, no outro dia, você discute com seus amigos sobre um episódio, vocês estão realmente falando sobre a mesma coisa? Ou cada um, de certa forma, assistiu a uma série um pouco diferente? A filosofia tem uma coisa ou duas a dizer sobre isso. <a href=artigo_x.html>Ler mais...</a>
@@ -45,7 +45,7 @@
         </div>
 
         <div class="card">
-            <div class="card-header"><a href=artigo_y.html>Roubou as cores do universo? Melhor ligar pro Saul. (qualia epifenomenal vs fisicalismo)</a></div>
+            <div class="card-header"><a href='artigo_epifenomenalismo.html'>Roubou as cores do universo? Melhor ligar pro Saul. (qualia epifenomenal vs fisicalismo)</a></div>
             <div class="card-body">	<img style = "border: 5px solid #EE8B31;" align="right" src = I1/Saul_Goodman.jpeg width = 35% >
                 <p>
                     É difícil imaginar como todas as coisas fascinantes que vagam pela nossa percepção poderiam não ser nada além da atividade complexa de neurônios atirando impulsos elétricos no nosso cérebro. Esse caráter quase mágico do nosso “mundo interior” convenceu diversos filósofos de que ele não deve estar no mundo físico em absoluto! Outros, por outro lado, não são encantados facilmente pela magia da Qualia. Para resolver essa disputa, só vai sobrar para a pobre Mary, cobaia dos experimentos caprichosos de filósofos.  <a href=artigo_y.html>Ler mais...</a>
@@ -55,7 +55,7 @@
 
         <h2>Problema mente-corpo</h2>
 		<div class="card">
-            <div class="card-header"><a href=artigo_z.html>Eu teria conseguido se não fossem esses filósofos enxeridos e esse Gilbert Ryle idiota!</a></div>
+            <div class="card-header"><a href='artigo_dualismo.html'>Eu teria conseguido se não fossem esses filósofos enxeridos e esse Gilbert Ryle idiota!</a></div>
             <div class="card-body">	<img style = "border: 5px solid #EE8B31" align="right" src = I1/Artigo_Z.jpeg width = 35% >
                 <p>
                     Durante séculos um fantasma assombrou os corredores do pensamento filosófico. Por meio de equívocos linguísticos e lógicos, ele foi saltando de mente em mente, nos prendendo a crenças antigas e ultrapassadas sobre a natureza da consciência. Gilbert Ryle e outros filósofos enxeridos, no entanto, comprometem-se em desmascará-lo, mostrando que todos esses fenômenos aparentemente sobrenaturais que formam nossa vida interior não precisam ser fantoches controlados por uma cópia nossa de outro mundo, ou alma: as vezes é só um cara material mascarado de mental. <a href=artigo_z.html>Ler mais...</a> 
