--- a/prometeu/inicio.html
+++ b/prometeu/inicio.html
@@ -109,12 +109,12 @@
          </div>
       </aside>
       <main id="wellcome">
-         <div class="site_logo">
-            <img src="imagens/logo1.png" alt="Cérebro">
-         </div>
          <div class="intro">
+            <img src="imagens/logo1.png" alt="Cérebro">
+         <div class="head">
             <h1>Prometeu:</h1>
             <p>Um Guia para a filosofia da mente</p>
+         </div>
          </div>
          <div id="sumary">
             <p>
