--- a/prometeu/inicio.html
+++ b/prometeu/inicio.html
@@ -11,7 +11,6 @@
       <link rel="icon" href="imagens/iconepag-red.png">
    </head>
    <body>
-		
       <!--Menu do topo-->
       <nav>
          <li >
@@ -111,10 +110,10 @@
       <main id="wellcome">
          <div class="intro">
             <img src="imagens/logo1.png" alt="Cérebro">
-         <div class="head">
-            <h1>Prometeu:</h1>
-            <p>Um Guia para a filosofia da mente</p>
-         </div>
+            <div class="head">
+               <h1>Prometeu:</h1>
+               <p>Um Guia para a filosofia da mente</p>
+            </div>
          </div>
          <div id="sumary">
             <p>
@@ -127,20 +126,28 @@
          <div class="intro_links" >
             <h2>Introdução:</h2>
             <a class="links" id="link1" href="">
-               <div class="title"><p>Introdução parte 1</p></div>
-               <div class="resume"><p>Introdução para todo o estilo e premissa do site</p></div>
+               <div class="title">
+                  <p>Introdução parte 1</p>
+               </div>
+               <div class="resume">
+                  <p>Introdução para todo o estilo e premissa do site</p>
+               </div>
                <div class="thumbnail"><img src="I1/Kate_Bush.jpeg" alt="placeholder"></div>
             </a>
             <a class="links" id="link2" href="">
-               <div class="title"><p>Introdução parte 2</p></div>
-               <div class="resume"><p>Introdução para todo o estilo e premissa do site</p></div>
+               <div class="title">
+                  <p>Introdução parte 2</p>
+               </div>
+               <div class="resume">
+                  <p>Introdução para todo o estilo e premissa do site</p>
+               </div>
                <div class="thumbnail"><img src="imagens/logo.png" alt="placeholder"></div>
             </a>
-            <a class="big_link" href="artigos.html"><i class="fa-solid fa-newspaper fa-lg"></i><p>Artigos</p></a>
+            <a class="big_link" href="artigos.html">
+               <i class="fa-solid fa-newspaper fa-lg"></i>
+               <p>Artigos</p>
+            </a>
          </div>
-
-            
-
       </main>
    </body>
 </html>
