--- a/prometeu/artigo_dualismo.html
+++ b/prometeu/artigo_dualismo.html
@@ -14,7 +14,7 @@
          <li >
             <a onclick="call_aside()" class="button_menu icon">
                <i class="fa-solid fa-bars fa-xl"></i> 
-               <p>Me</p>
+               <p>Menu</p>
             </a>
          </li>
          <li>
