--- a/prometeu/inicio.html
+++ b/prometeu/inicio.html
@@ -14,7 +14,7 @@
       <!--Menu do topo-->
       <nav>
          <li >
-            <a onclick="call_aside()" class="button_menu icon">
+            <a onclick="call('side_menu')" class="button_menu icon">
                <i class="fa-solid fa-bars fa-xl"></i> 
                <p>Menu</p>
             </a>
@@ -38,17 +38,17 @@
             </a>
          </li>
          <li>
-            <a class="icon" onclick="call_config()">
+            <a class="icon" onclick="call('config_menu')">
                <i class="fa-solid fa-gear fa-sm"></i>
                <p>Configurações</p>
             </a>
          </li>
          <li>
-            <a onclick="call_bar()" class="icon">
+            <a onclick="call('bar')" class="icon">
                <i class="fa-solid fa-magnifying-glass fa-sm"></i>
                <p>Busca</p>
             </a>
-            <div class="search_bar" id="bar">
+            <div class="search_bar menu" id="bar">
                <input type="text">
                <button><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
             </div>
@@ -56,8 +56,8 @@
          <img id="logo" src="imagens/logopainel.png" alt="logo">
       </nav>
       <!-- Menu de Configurações -->
-      <div class="config" id="config_menu">
-         <a class="close_menu icon" onclick="call_config()"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
+      <div class="config menu" id="config_menu">
+         <a class="close_menu icon" onclick="close_element('config_menu')"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
          <h4>Aparência</h4>
          <div class="themes">
             <h5>Temas:</h5>
@@ -89,7 +89,7 @@
       <aside id="side_menu">
          <div class="top">
             <h4>Artigos</h4>
-            <a class="icon close_menu" onclick="call_aside()"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
+            <a class="icon close_menu" onclick="close_element('side_menu')"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
          </div>
          <div class="artigos">
             <a href="artigo_qualia.html">Qualia</a>
@@ -109,7 +109,7 @@
       </aside>
       <main id="wellcome">
          <div class="intro">
-            <img src="imagens/logo1.png" alt="Cérebro">
+            <img src="imagens/logo1.png" alt="Cérebro" >
             <div class="head">
                <h1>Prometeu:</h1>
                <p>Um Guia para a filosofia da mente</p>
