--- a/prometeu/inicio.html
+++ b/prometeu/inicio.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
       <script src="https://kit.fontawesome.com/a4134bbe98.js" crossorigin="anonymous"></script>
-      <script src="insteractions.js"></script>
+      <script src="insteractions.js" async></script>
       <title>Prometeu</title>
       <link rel="stylesheet" href="main_style.css">
       <link rel="icon" href="imagens/iconepag-red.png">
@@ -86,7 +86,7 @@
             -->
       </div>
       <!--Menu lateral dos artigos -->
-      <aside id="side_menu">
+      <aside id="side_menu" class="menu">
          <div class="top">
             <h4>Artigos</h4>
             <a class="icon close_menu" onclick="close_element('side_menu')"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
@@ -148,6 +148,10 @@
                <p>Artigos</p>
             </a>
          </div>
+
+         <div class="test" width=55px >a</div>
+         <div class="test" width=55px>a</div>
+         <div class="test" width=55px>a</div>
       </main>
    </body>
 </html>
