--- a/prometeu/inicio.html
+++ b/prometeu/inicio.html
@@ -61,11 +61,11 @@
          <h4>Aparência</h4>
          <div class="themes">
             <h5>Temas:</h5>
-            <div class="field">
+            <div class="field" onclick="change_theme('dark_theme')">
                <input type="radio" name="themes" id="dark">
                <label for="dark">Tema escuro</label>
             </div>
-            <div class="field">
+            <div class="field" onclick="change_theme()">
                <input type="radio" name="themes" id="light" checked="checked">
                <label for="light">Tema claro</label>
             </div>
