--- a/prometeu/artigos.html
+++ b/prometeu/artigos.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
       <script src="https://kit.fontawesome.com/a4134bbe98.js" crossorigin="anonymous"></script>
-      <script src="insteractions.js"></script>
+      <script src="insteractions.js" async></script>
       <title>Prometeu</title>
       <link rel="stylesheet" href="main_style.css">
       <link rel="icon" href="imagens/iconepag-red.png">
@@ -14,18 +14,18 @@
       <!--Menu do topo-->
       <nav>
          <li >
-            <a onclick="call_aside()" class="button_menu icon">
+            <a onclick="call('side_menu')" class="button_menu icon">
                <i class="fa-solid fa-bars fa-xl"></i> 
                <p>Menu</p>
             </a>
          </li>
-         <li>
+         <li class="selected">
             <a class="icon" href="inicio.html">
                <span><i class="fa-solid fa-house fa-sm"></i></span>
                <p>Início</p>
             </a>
          </li>
-         <li class="selected">
+         <li>
             <a class="icon" href="artigos.html">
                <i class="fa-solid fa-newspaper fa-sm"></i>
                <p>Artigos</p>
@@ -38,17 +38,17 @@
             </a>
          </li>
          <li>
-            <a class="icon" onclick="call_config()">
+            <a class="icon" onclick="call('config_menu')">
                <i class="fa-solid fa-gear fa-sm"></i>
                <p>Configurações</p>
             </a>
          </li>
          <li>
-            <a onclick="call_bar()" class="icon">
+            <a onclick="call('bar')" class="icon">
                <i class="fa-solid fa-magnifying-glass fa-sm"></i>
                <p>Busca</p>
             </a>
-            <div class="search_bar" id="bar">
+            <div class="search_bar menu" id="bar">
                <input type="text">
                <button><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
             </div>
@@ -56,22 +56,28 @@
          <img id="logo" src="imagens/logopainel.png" alt="logo">
       </nav>
       <!-- Menu de Configurações -->
-      <div class="config" id="config_menu">
-         <a class="close_menu icon" onclick="call_config()"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
+      <div class="config menu" id="config_menu">
+         <a class="close_menu icon" onclick="close_element('config_menu')"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
          <h4>Aparência</h4>
+         <h5>Temas:</h5>
          <div class="themes">
-            <h5>Temas:</h5>
-            <div class="field">
-               <input type="radio" name="themes" id="dark">
-               <label for="dark">Tema escuro</label>
+            <div class="field " id="dark" onclick="change_theme('dark_theme', this)">
+               <a class="icon">
+                  <i class="fa-sharp fa-solid fa-cloud-moon"></i>
+                  <p>Tema Escuro</p>
+               </a>
             </div>
-            <div class="field">
-               <input type="radio" name="themes" id="light" checked="checked">
-               <label for="light">Tema claro</label>
+            <div class="field " id='light' onclick="change_theme('light_theme', this)">
+               <a class="icon">
+                  <i class="fa-solid fa-sun"></i>
+                  <p>Tema claro</p>
+               </a>
             </div>
-            <div class="field">
-               <input type="radio" name="themes" id="high_contrast">
-               <label for="high_contrast">Alto contraste</label>
+            <div class="field " id='contrast' onclick="change_theme('high_contrast', this)">
+               <a class="icon">
+                  <i class="fa-solid fa-eye"></i>
+                  <p>Alto-contraste</p>
+               </a>
             </div>
          </div>
          <!-- 
@@ -86,10 +92,10 @@
             -->
       </div>
       <!--Menu lateral dos artigos -->
-      <aside id="side_menu">
+      <aside id="side_menu" class="menu">
          <div class="top">
             <h4>Artigos</h4>
-            <a class="icon close_menu" onclick="call_aside()"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
+            <a class="icon close_menu" onclick="close_element('side_menu')"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
          </div>
          <div class="artigos">
             <a href="artigo_qualia.html">Qualia</a>
