--- a/prometeu/referencias.html
+++ b/prometeu/referencias.html
@@ -19,7 +19,7 @@
                <p>Menu</p>
             </a>
          </li>
-         <li class="selected">
+         <li>
             <a class="icon" href="inicio.html">
                <span><i class="fa-solid fa-house fa-sm"></i></span>
                <p>Início</p>
@@ -103,7 +103,7 @@
             <a href="artigo_dualismo.html">Dualismo</a>
          </div>
          <div class="extras">
-            <a class="icon" href="referencias.html">
+            <a class="icon selected" href="referencias.html">
                <i class="fa-solid fa-circle-info fa-sm"></i>
                <p>Referências</p>
             </a>
