--- a/prometeu/sobre.html
+++ b/prometeu/sobre.html
@@ -19,7 +19,7 @@
                <p>Menu</p>
             </a>
          </li>
-         <li class="selected">
+         <li>
             <a class="icon" href="inicio.html">
                <span><i class="fa-solid fa-house fa-sm"></i></span>
                <p>Início</p>
@@ -107,7 +107,7 @@
                <i class="fa-solid fa-circle-info fa-sm"></i>
                <p>Referências</p>
             </a>
-            <a class="icon" href="sobre.html">
+            <a class="icon selected" href="sobre.html">
                <i class="fa-solid fa-address-card fa-sm"></i>
                <p>Sobre</p>
             </a>
