--- a/prometeu/artigos.html
+++ b/prometeu/artigos.html
@@ -98,6 +98,8 @@
             <a class="icon close_menu" onclick="close_element('side_menu')"><i class="fa-sharp fa-solid fa-circle-xmark fa-lg"></i></a>
          </div>
          <div class="artigos">
+	    <a href="artigo_zumbi_filosofico_1.html">O Apocalipse Zumbi (filosófico!) – parte 1</a>
+	    <a href="artigo_zumbi_filosofico_2.html">O Apocalipse Zumbi (filosófico!) – parte 2</a>
             <a href="artigo_qualia.html">Qualia</a>
             <a href="artigo_epifenomenalismo.html">Epifenomenalismo</a>
             <a href="artigo_dualismo.html">Dualismo</a>
@@ -110,10 +112,35 @@
             <a class="icon" href="sobre.html">
                <i class="fa-solid fa-address-card fa-sm"></i>
                <p>Sobre</p>
-            </a>
+              </a>
          </div>
       </aside>
       <div class="container">
+         </a>   
+         <h2>Introdução</h2>
+         <a href='artigo_zumbi_filosofico_1.html' class="showcase">
+            <div class="show-header">
+               <h4>O Apocalipse Zumbi (Filosófico!) – Parte 1</h4>
+            </div>
+            <div class="show-body">
+               <div class="display"><img src = I1/Shaun.jpg></div>
+               <p>
+                  Você acorda em uma segunda-feira ordinária para tropeçar com o pé direito e cair em mais um dia de cotidiano: levantar, escovar os dentes, banho em uma harmonia de música e gotas... entre isso e o fechar atrás de si a porta para ir à escola, há sempre o momento ritualístico de sentar-se à mesa com sua família para tomar café e comer pão com manteiga. Seu rosto iluminado pelo sol que penetra ainda sonolento a janela e pela tela do seu celular, onde sucedem-se os frames de um vídeo qualquer no YouTube. Todos mastigam, como sempre, e reclamam da vida, como sempre, e reclamam inclusive que o volume do seu celular está alto demais, como sempre, impedindo que eles possam continuar a reclamar da vida em todo o seu potencial, como sempre. 
+
+         </p>
+         </div>
+         </a>
+         <a href='artigo_zumbi_filosofico_2.html' class="showcase">
+            <div class="show-header">
+               <h4>O Apocalipse Zumbi (Filosófico!) – Parte 2</h4>
+            </div>
+            <div class="show-body">
+               <div class="display"><img src = I1/I_Am_a_Hero.jpg></div>
+               <p>
+                  Tantas páginas passaram por seus olhos que já não seria capaz de contá-las. Seria como tentar contar os carros cruzando uma rodovia movimentada em horário comercial. Nesse processo vertiginoso, porém, você acaba por fazer uma descoberta: aquilo que julgava não passar de divagações de uma mente perturbada são, na verdade, fragmentos de debates filosóficos seriamente levantados. Parte do que os filósofos chamam de “o problema das outras mentes”. Esse problema pode ser elucidado a partir de dois conceitos. 
+         </p>
+         </div>
+         </a>
          <h2>Fenomenologia</h2>
          <a href='artigo_qualia.html' class="showcase">
             <div class="show-header">
@@ -123,7 +150,6 @@
                <div class="display"><img src = I1/Kate_Bush.jpeg></div>
                <p>
                   Séries populares como Stranger Things têm uma propriedade talvez tão interessante quanto suas histórias em si: elas nos permitem, de certa forma, compartilhar experiências. Milhões de pessoas ao redor do mundo, por mais diferentes que sejam, são unidas por um instante ao experimentarem aquela cena emocionante, aquele momento decisivo, aquele final arrebatador. Ou ao menos é o que parece. Mesmo que todos vissem simultaneamente a mesma cena, e nas exatas mesmas condições, elas realmente teriam a mesma experiência? Quando, no outro dia, você discute com seus amigos sobre um episódio, vocês estão realmente falando sobre a mesma coisa? Ou cada um, de certa forma, assistiu a uma série um pouco diferente? A filosofia tem uma coisa ou duas a dizer sobre isso. 
-
             </p>
             </div>
          </a>
