--- a/prometeu/inicio.html
+++ b/prometeu/inicio.html
@@ -131,23 +131,24 @@
          </div>
          <div class="intro_links" >
             <h2>Introdução:</h2>
-            <a class="links" id="link1" href="">
+            <a class="links" id="link1" href="artigo_zumbi_filosofico_1.html">
                <div class="title">
-                  <p>Introdução parte 1</p>
+                  <p>O Apocalipse Zumbi (Filosófico!) – Parte 1</p>
                </div>
                <div class="resume">
-                  <p>Introdução para todo o estilo e premissa do site</p>
+                  <p>Você acorda em uma segunda-feira ordinária para tropeçar com o pé direito e cair em mais um dia de cotidiano: levantar, escovar os dentes, banho em uma harmonia de música e gotas... entre isso e o fechar atrás de si a porta para ir à escola, há sempre o momento ritualístico de sentar-se à mesa com sua família para tomar café e comer pão com manteiga. Seu rosto iluminado pelo sol que penetra ainda sonolento a janela e pela tela do seu celular, onde sucedem-se os frames de um vídeo qualquer no YouTube. Todos mastigam, como sempre, e reclamam da vida, como sempre, e reclamam inclusive que o volume do seu celular está alto demais, como sempre, impedindo que eles possam continuar a reclamar da vida em todo o seu potencial, como sempre. 
+                  </p>
                </div>
-               <div class="thumbnail"><img src="I1/Kate_Bush.jpeg" alt="placeholder"></div>
+               <div class="thumbnail"><img src="I1/Shaun.jpg" alt="ed"></div>
             </a>
-            <a class="links" id="link2" href="">
+            <a class="links" id="link2" href="artigo_zumbi_filosofico_2.html">
                <div class="title">
-                  <p>Introdução parte 2</p>
+                  <p>O Apocalipse Zumbi (Filosófico!) – Parte 2</p>
                </div>
                <div class="resume">
-                  <p>Introdução para todo o estilo e premissa do site</p>
+                  <p>Tantas páginas passaram por seus olhos que já não seria capaz de contá-las. Seria como tentar contar os carros cruzando uma rodovia movimentada em horário comercial. Nesse processo vertiginoso, porém, você acaba por fazer uma descoberta: aquilo que julgava não passar de divagações de uma mente perturbada são, na verdade, fragmentos de debates filosóficos seriamente levantados. Parte do que os filósofos chamam de “o problema das outras mentes”. Esse problema pode ser elucidado a partir de dois conceitos.</p>
                </div>
-               <div class="thumbnail"><img src="imagens/logo.png" alt="placeholder"></div>
+               <div class="thumbnail"><img src="I1/I_Am_a_Hero.jpg" alt="i am a hero"></div>
             </a>
             <a class="big_link" href="artigos.html">
                <i class="fa-solid fa-newspaper fa-lg"></i>
